<resources>
    <string name="app_name">WhatsApp</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="sign_up">sign up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up_with_phone">Sign Up with Phone</string>
    <string name="sign_in">Sign In</string>
    <string name="click_for_signup">Click for SignUp</string>
    <string name="click_for_signup2">Click for SignUp</string>
    <string name="clint_id">541293205778–04k9mhfb7d88nhtnns84l7pgfr2nfemv.apps.googleusercontent.com</string>
    <string name="web_client_id" />
    <string name="sign_in1">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chating_user">Chating User</string>
    <string name="last_massege">Last massege</string>
    <string name="enter_your_message">Enter Your Message.</string>
    <string name="textview">TextView</string>
    <string name="_12_00pm">12:00pm</string>
    <string name="_12_00am">12:00am</string>
    <string name="group_chat">Group Chat</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="group_chat1">Group Chat</string>
    <string name="about">About :</string>
    <string name="user_name">User Name :</string>
    <string name="about1">About</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About US</string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="message">Message</string>
    <string name="continue1">Continue</string>
    <string name="continue2">Continue</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_919520771020">Verify +919520771020</string>
    <string name="about2">About</string>
    <string name="please_set_your_name_and_optional_profile_image">Please set your name and optional profile image</string>
    <string name="tap_to_chat">Tap To Chat</string>
    <string name="_12_00_pm1">12:00 PM</string>
    <string name="new_group">New Group</string>
    <string name="settings1">Settings</string>
    <string name="starred_messages">Starred Messages</string>
    <string name="whatsapp_web">WhatsApp Web</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="account">Account</string>
    <string name="privacy_security_change_number">Privacy, Security, change number</string>
    <string name="chats">Chats</string>
    <string name="theme_wallpapers_chat_history">Theme, wallpapers, chat history</string>
    <string name="message_group_call_tones"><![CDATA[Message, group & call tones]]></string>
    <string name="notifications">Notifications</string>
    <string name="network_usage_auto_download">Network usage, auto download</string>
    <string name="help1">Help</string>
    <string name="help_center_contacts_us_privacy_policy">Help center, contacts us,privacy policy</string>
    <string name="invite_a_friend1">invite a friend</string>
    <string name="whatsapp">WhatsApp</string>
</resources>